[gd_scene load_steps=6 format=3 uid="uid://b2l1vj4n6hnhl"]

[ext_resource type="PackedScene" uid="uid://cwo1ydpelqw41" path="res://characters/warrok/warrok_w_kurniawan.tscn" id="1_o8snk"]
[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_ukksm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_exufp"]
radius = 0.930022

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rgjuf"]
radius = 3.90295

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x0638"]
radius = 1.51627
height = 3.03255

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_ukksm")

[node name="Warrok W Kurniawan" parent="." instance=ExtResource("1_o8snk")]

[node name="GeneralSkeleton" parent="Warrok W Kurniawan" index="0"]
bones/1/rotation = Quaternion(0.0811729, -0.016276, 0.00655862, 0.996546)
bones/2/rotation = Quaternion(0.145441, -0.0317009, 0.00620534, 0.98884)
bones/3/rotation = Quaternion(0.146218, -0.0310216, 0.00544917, 0.988751)
bones/4/rotation = Quaternion(-0.0416014, 0.0597784, -0.0371255, 0.996653)
bones/5/rotation = Quaternion(-0.260639, 0.27431, -0.106361, 0.919515)
bones/10/rotation = Quaternion(0.552222, 0.439376, 0.533098, -0.466697)
bones/11/rotation = Quaternion(0.342039, 0.877554, -0.330789, 0.0590578)
bones/12/rotation = Quaternion(0.380408, -0.596062, 0.380408, 0.596062)
bones/13/rotation = Quaternion(-0.124028, 0.780623, 0.200997, 0.578658)
bones/18/rotation = Quaternion(0.181807, -8.81646e-08, -0.0219406, 0.983089)
bones/19/rotation = Quaternion(0.203101, 7.25995e-08, -0.0245106, 0.978851)
bones/22/rotation = Quaternion(0.181692, -1.18043e-07, -0.0219266, 0.983111)
bones/34/rotation = Quaternion(0.50926, -0.464784, -0.577308, -0.437431)
bones/35/rotation = Quaternion(-0.332073, 0.813764, -0.465381, -0.104578)
bones/36/rotation = Quaternion(0.46971, 0.528557, -0.46971, 0.528557)
bones/37/rotation = Quaternion(-0.0179385, -0.835155, -0.0499422, 0.547448)
bones/42/rotation = Quaternion(0.181853, 5.91062e-08, 0.0221621, 0.983076)
bones/43/rotation = Quaternion(0.201793, -4.41541e-08, 0.0245921, 0.979119)
bones/63/rotation = Quaternion(0.106948, 0.407236, 0.883582, -0.204949)
bones/64/rotation = Quaternion(0.0125499, 0.893716, -0.448374, -0.00869139)
bones/65/rotation = Quaternion(-0.0793318, 0.633372, -0.75931, 0.12647)
bones/66/rotation = Quaternion(-2.18115e-08, 0.999969, 0.00786623, 1.07063e-08)
bones/68/rotation = Quaternion(-0.155582, 0.280108, 0.919388, 0.228166)
bones/69/rotation = Quaternion(-0.0264866, 0.910326, -0.412725, 0.0162093)
bones/70/rotation = Quaternion(0.118787, 0.578414, -0.790553, -0.162336)
bones/71/rotation = Quaternion(0.000496753, 0.999995, 0.00268759, -0.00172685)

[node name="AnimationTree" parent="Warrok W Kurniawan" index="2"]
parameters/current_position = 0.451365
parameters/current_delta = 0.0583657
parameters/motion/current_position = 0.451365
parameters/motion/current_delta = 0.0583657
parameters/motion/0/current_position = 0.451365
parameters/motion/0/current_delta = 0.0583657
parameters/motion/2/current_position = 0.451364
parameters/motion/2/current_delta = 0.0583657
parameters/motion/4/current_position = 0.451365
parameters/motion/4/current_delta = 0.0583657
parameters/motion_attack/current_position = 0.451365
parameters/motion_attack/current_delta = 0.0583657
parameters/output/current_position = 0.451365
parameters/output/current_delta = 0.0583657

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.887006, 0.2)
shape = SubResource("CapsuleShape3D_exufp")

[node name="AlertArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AlertArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.616431, 0)
shape = SubResource("CylinderShape3D_rgjuf")

[node name="AttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.901829, 0.212281)
shape = SubResource("CapsuleShape3D_x0638")

[connection signal="body_entered" from="AlertArea" to="." method="_on_alert_area_body_entered"]
[connection signal="body_exited" from="AlertArea" to="." method="_on_alert_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]

[editable path="Warrok W Kurniawan"]
